--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.jpa.open-in-view=false
+#spring.profiles.active=dev
 
-spring.profiles.active=test
+# se a variavel de ambiente APP_PROFILE nao estiver definida, rodar no modo TEST
+spring.profiles.active=${APP_PROFILE:test}
+
+spring.jpa.open-in-view=false
